--- a/asset/css/style.scss
+++ b/asset/css/style.scss
@@ -4,13 +4,150 @@
 *
 ****************/
 
-
-
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&family=Raleway:wght@100&display=swap');
 
-// body {
-//     box-sizing: border-box;
-//     max-width: 1140px;
-//     font-size: 1.5rem;
-//     line-height: 2.0rem;
-// }
+@mixin flex_columns_center {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+@mixin flex_center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+
+
+$font_size:1.5rem;
+$font_size_h1:3.6rem;
+$font_size_h2:2.4rem;
+$font_size_h3:1.8rem;
+$line_height: 2.0rem;
+$font_title: raleway;
+$color_grey:#eee;
+$color_header:#0c6588;
+$color_menu:#e2f7ff;
+$color_main:#fff;
+$color_footer:#333;
+$text_header:#e2f7ff;
+$text_footer:#ddd;
+$color_link_button:#0c6588;
+$color_link_button_hover:#000;
+$color_link_footer:#eee;
+
+
+h1 {
+    font-size: 3.6rem;
+    font-family: raleway serif;
+    color: #333;
+}
+
+h2 {
+    font-size: 2.4rem;
+    font-family: raleway serif;
+    color: #333;
+}
+
+h3 {
+    font-size: 1.8rem;
+    font-family: raleway serif;
+    color: #333;
+}
+
+
+
+body {
+    box-sizing: border-box;
+    max-width: 1140px;
+    color: #555;
+    font-size: $font_size;
+}
+
+
+
+.H1_name_header span {
+    color: #fff;
+}
+
+.option_display_header {
+    @include flex_columns_center;
+    background-color: $color_menu;
+}
+
+.H1_name_header {
+    font-size: 3.6rem;
+    font-family: raleway serif;
+    color: #fff
+}
+
+.bg_header_mobile {
+    background-image: url("../image/header.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 50%;
+    @include flex_columns_center;
+}
+
+.logo {
+    width: 10%;
+}
+
+.icon_user_header {
+    display: flex;
+
+}
+
+.icon_user,
+.icon_basket {
+    font-size: 1.5rem;
+    text-align: center;
+    margin-left: 25px;
+    @include flex_center;
+}
+
+.icon_user a,
+.icon_basket a {
+    color: #fff;
+}
+
+.menu_header {
+    @include flex_columns_center;
+    background-color: $color_menu;
+
+}
+
+.space_header_icon {
+    padding: 8px;
+}
+
+.anchors_AOC {
+    display: flex;
+    flex-direction: column;
+    align-content: start;
+
+}
+
+.etiquette {
+    background-color: #dae0e5;
+    height: auto;
+}
+
+.container_etiquette {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.container_price {
+    background-color: $color_grey;
+}
+
+.in_basket {
+    background-color: $color_header;
+}
